# clawdpot

./: .gitignore  CLAUDE.md  FIXES_SUMMARY.md  README.md  pyproject.toml
clawdpot/: __init__.py  __main__.py  environment.py  models.py  notes.md  ollama_log.py  pricing.py  runner.py  scorer.py
clawdpot/scenarios/: __init__.py
clawdpot/scenarios/api_server/: __init__.py  spec.md
clawdpot/scenarios/api_server_handoff/: __init__.py  phase1_spec.md  phase2_spec.md
clawdpot/scenarios/api_server_handoff/tests/: test_api_server.py
clawdpot/scenarios/calculator/: __init__.py  spec.md
clawdpot/scenarios/calculator/tests/: test_calculator.py
clawdpot/scenarios/debug_hunt/: __init__.py  spec.md
clawdpot/scenarios/debug_hunt/seed/: app.py  utils.py
clawdpot/scenarios/debug_hunt/tests/: test_debug_hunt.py
clawdpot/scenarios/gsd_calculator/: __init__.py  spec.md  tests
clawdpot/scenarios/gsd_calculator/seed/.planning/: ROADMAP.md  STATE.md  config.json
clawdpot/scenarios/refactor/: __init__.py  spec.md
clawdpot/scenarios/refactor/seed/: inventory.py
clawdpot/scenarios/refactor/tests/: test_refactor.py
